fix: function-script

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container-first">
     
-    <p id="display">
+    <p id="display" class="display">
         10
     </p>
 
@@ -41,6 +41,9 @@
 
    
 </div>
+<button id='button' class="bottone hide">
+    Check
+</button>
 
 
 
